# TinyPEViewer

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.h  FileDialog.cpp  FileDialog.h  PEParser.cpp  PEParser.h  PETypes.h  Utils.cpp  Utils.h  main.cpp
src/ui/: Panels.cpp  Panels.h
